--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,5 @@ envlist = py26, py27, py34, py35
 skip_missing_interpreters = true
 
 [testenv]
+deps = -r{toxinidir}/requirements.txt
 commands = python setup.py test
