Added a `timeout` argument
Also added a `default_timeout` argument to `api`.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.pyc
 *.swo
 *.swp
+*.sublime-*
 __pycache__
 local_settings.py
 
@@ -20,3 +21,6 @@ build/*
 
 # testing/tox
 .tox/
+
+# virtualenv
+.venv
