Move to pytest based tests and make use of multiple CPUs
From what I’ve seen the average test time is down to about 20% of
what the old test suite took to run.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ local_settings.py
 
 # pypi building stuff
 MANIFEST
+.cache/
 dist/
 dist/*
 build/
@@ -17,6 +18,9 @@ build/*
 # IntelliJ
 .idea
 *.iml
+
+# Sublime Text
+*.sublime-*
 
 # testing/tox
 .tox/
