--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,17 @@
 [tox]
-envlist = py26, py27, py34, py35
+envlist = py{26,27,34,35}, lint
 skip_missing_interpreters = true
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-commands = python setup.py test
+deps = .[test]
+commands = py.test -n auto
+
+[testenv:lint]
+commands =
+    flake8 sendwithus/ test_base.py
+    isort --verbose --recursive --diff sendwithus/
+    isort --verbose --recursive --check-only sendwithus/
+deps =
+    .
+    flake8>=3.2.1
+    isort>=4.2.5
