--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
   - python: 3.5
     env:
       - TOXENV='lint'
+  - python: 3.6
+    env:
+      - TOXENV='py36'
 
 install:
   - pip install tox
