Fix tests, remove hardcoded resource ids

--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,14 @@ envlist = py{27,34,35,36,37,38}, lint
 skip_missing_interpreters = true
 
 [testenv]
+passenv = *
 deps = .[test]
 commands = py.test -n auto
 
 [testenv:lint]
+passenv = *
 commands =
-    flake8 sendwithus/test_base.py
+    flake8 sendwithus/ test_base.py
     isort --verbose --recursive --diff sendwithus/
     isort --verbose --recursive --check-only sendwithus/
 deps =
